# ctf-writeups

2025_ctfzone/misc/minesweeper/sources/: .dockerignore  Dockerfile  pyproject.toml  test_sessions.py
2025_ctfzone/misc/minesweeper/sources/minesweeper/: app.py  config.py  game_logic.py  generator.py
2025_tinkoff_ctf/web/brethren/sources/backend/: .env.dist  Dockerfile  alembic.ini  config.py  ioc.py  main.py  pyproject.toml
2025_tinkoff_ctf/web/brethren/sources/backend/application/: dto.py  interactors.py  interfaces.py  security.py
2025_tinkoff_ctf/web/brethren/sources/backend/controllers/: http.py  schemas.py
2025_tinkoff_ctf/web/brethren/sources/backend/domain/: entities.py
2025_tinkoff_ctf/web/brethren/sources/backend/infrastructure/: gateways.py  models.py
2025_tinkoff_ctf/web/brethren/sources/backend/infrastructure/database/: models.py
2025_tinkoff_ctf/web/brethren/sources/backend/infrastructure/migrations/: env.py
2025_tinkoff_ctf/web/brethren/sources/backend/tickets/2a7b6e4d-9c1f-4f8a-b5d3-e8f2c9a1d0b3/: Диета_и_питание  Здоровье_и_благополучие  Модели_социального_поведения  Основы_анатомии_капибар  Размножение_и_развитие  Распорядок_дня  Терморегуляция  Требования_к_среде_обитания  Эволюционная_история
2025_tinkoff_ctf/web/brethren/sources/backend/tickets/3f9d2e8c-6b5a-4c7d-9e1f-7d8a2b4c5f9a/: Анализ_качества_воды  Влияние_температуры_воды  Водная_флора  Динамика_воды  Основы_гидротерапии  Подводная_акустика  Сезонные_водные_активности  Социальное_купание  Техники_плавания
2025_tinkoff_ctf/web/brethren/sources/backend/tickets/4e1d8f5a-2b3c-4a9e-8d7f-6c0b9e3d2a1c/: Анализ_питательности  Вкусовые_предпочтения  Идентификация_трав  Классификация_трав  Сохранение_пищи  (+4 more)
2025_tinkoff_ctf/web/caparet/sources/: .dockerignore  .env  Caddyfile  Dockerfile  docker-compose.yml  main.py  pyproject.toml
2025_tinkoff_ctf/web/caparet/sources/app/: config.py  main.py  models.py
2025_tinkoff_ctf/web/caparet/sources/app/routers/: api.py
2025_tinkoff_ctf/web/caparet/sources/app/utils/: crypto.py  flag.py
2025_tinkoff_ctf/web/caparet/sources/static/: index.html
2025_tinkoff_ctf/web/caparet/sources/static/css/: style.css
2025_tinkoff_ctf/web/caparet/sources/static/js/: app.js
(+1120 files in other folders)
